# Joseph D. Copyright (C) 2015. GNU GPLv3.

#
# Project Properties
#
CMAKE_MINIMUM_REQUIRED(VERSION 2.6.2)
PROJECT(deep-thought)
SET(APPLICATION_NAME "default")
SET(APPLICATION_CODENAME "${PROJECT_NAME}")
SET(APPLICATION_COPYRIGHT_YEARS "2015")
SET(APPLICATION_VERSION_MAJOR 1)
SET(APPLICATION_VERSION_MINOR 0)
SET(APPLICATION_VERSION_PATCH 0)
SET(APPLICATION_VERSION_TYPE SNAPSHOT)
SET(APPLICATION_VERSION_STRING "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}.${APPLICATION_VERSION_PATCH}-${APPLICATION_VERSION_TYPE}")
SET(APPLICATION_VENDOR_ID "com.panicnot42")
SET(APPLICATION_VENDOR_NAME "panicnot42")
SET(APPLICATION_VENDOR_URL "panicnot42.com")
SET(APPLICATION_ID "${APPLICATION_VENDOR_ID}.${PROJECT_NAME}")
LIST(APPEND CMAKE_CXX_FLAGS "-std=gnu++11 ${CMAKE_CXX_FLAGS} -ftest-coverage -fprofile-arcs")

#
# Debugging Options
#
SET(CMAKE_VERBOSE_MAKEFILE 0) # Use 1 for debugging, 0 for release

#
# Project Output Paths
#
SET(MAINFOLDER ${PROJECT_SOURCE_DIR})
SET(EXECUTABLE_OUTPUT_PATH "${MAINFOLDER}/bin")

#
# Project Search Paths
#
LIST(APPEND CMAKE_PREFIX_PATH "${MAINFOLDER}/tools/cmake")
SET(CMAKE_MODULE_PATH "${MAINFOLDER}/tools/cmake")

#
# Locate Project Prerequisites 
#
SET(Boost_ADDITIONAL_VERSIONS "1.39" "1.39.0" "1.40" "1.40.0" "1.41" "1.41.0" "1.42" "1.42.0" "1.43" "1.43.0" "1.44" "1.44.0" "1.45" "1.45.0" "1.46" "1.46.0" "1.47" "1.47.0" "1.48" "1.48.0" "1.49" "1.49.0" "1.50" "1.50.0")
FIND_PACKAGE(Boost 1.37 COMPONENTS "program_options" "system" "thread" "wserialization" REQUIRED)
FIND_PACKAGE(Log4Cxx REQUIRED)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${LOG4CXX_INCLUDE_DIR})

#
# Configure Files
#
FILE(GLOB_RECURSE CONFIGINPUTS1 include/*.in.hpp.cmake)
FILE(GLOB_RECURSE CONFIGINPUTS2 include/*.hpp.in.cmake)
FILE(GLOB_RECURSE CONFIGINPUTS3 src/*.in.hpp.cmake)
FILE(GLOB_RECURSE CONFIGINPUTS4 src/*.hpp.in.cmake)
FILE(GLOB_RECURSE CONFIGINPUTS5 test/*.in.hpp.cmake)
FILE(GLOB_RECURSE CONFIGINPUTS6 test/*.hpp.in.cmake)
LIST(APPEND CONFIGINPUTS "${CONFIGINPUTS1}")
LIST(APPEND CONFIGINPUTS "${CONFIGINPUTS2}")
LIST(APPEND CONFIGINPUTS "${CONFIGINPUTS3}")
LIST(APPEND CONFIGINPUTS "${CONFIGINPUTS4}")
LIST(APPEND CONFIGINPUTS "${CONFIGINPUTS5}")
LIST(APPEND CONFIGINPUTS "${CONFIGINPUTS6}")
FOREACH(CONFIGINPUT ${CONFIGINPUTS})
    STRING (REPLACE ".in.h.cmake" ".h" CONFIGOUTPUT1 "${CONFIGINPUT}")
    STRING (REPLACE ".h.in.cmake" ".h" CONFIGOUTPUT2 "${CONFIGOUTPUT1}")
    CONFIGURE_FILE ("${CONFIGINPUT}" "${CONFIGOUTPUT2}")
ENDFOREACH(CONFIGINPUT ${CONFIGINPUTS})

#
# Add Build Targets
#
ADD_SUBDIRECTORY(src)

#
# Add Documentation Targets
#
#INCLUDE(DocumentationTargets)
