# Joseph D. Copyright (C) 2015. GNU GPLv3.

CMAKE_MINIMUM_REQUIRED(VERSION 3.2.0 FATAL_ERROR)

include("cmake/HunterGate.cmake")
HunterGate(
    URL "https://github.com/ruslo/hunter/archive/v0.12.39.tar.gz"
    SHA1 "587bc8f6278f2b09ec8759d2b6a2f8d828c30f49"
)

#
# Project Properties
#
PROJECT(default)
SET(APPLICATION_NAME "default")
SET(APPLICATION_CODENAME "${PROJECT_NAME}")
SET(APPLICATION_COPYRIGHT_YEARS "2016")
SET(APPLICATION_VERSION_MAJOR 1)
SET(APPLICATION_VERSION_MINOR 0)
SET(APPLICATION_VERSION_PATCH 0)
SET(APPLICATION_VERSION_TYPE SNAPSHOT)
SET(APPLICATION_VERSION_STRING "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}.${APPLICATION_VERSION_PATCH}-${APPLICATION_VERSION_TYPE}")
SET(APPLICATION_VENDOR_ID "com.outurnate")
SET(APPLICATION_VENDOR_NAME "outurnate")
SET(APPLICATION_VENDOR_URL "outurnate.com")
SET(APPLICATION_ID "${APPLICATION_VENDOR_ID}.${PROJECT_NAME}")

#
# Debugging Options
#
SET(CMAKE_VERBOSE_MAKEFILE 0) # Use 1 for debugging, 0 for release

#
# Project Output Paths
#
SET(MAINFOLDER ${PROJECT_SOURCE_DIR})
SET(EXECUTABLE_OUTPUT_PATH "${MAINFOLDER}/bin")

#
# Locate Project Prerequisites 
#
hunter_add_package(Boost COMPONENTS system filesystem program_options)
find_package(Boost CONFIG REQUIRED system filesystem program_options)

#
# Configure Files
#
FILE(GLOB_RECURSE CONFIGINPUTS1 include/*.in.hpp.cmake)
FILE(GLOB_RECURSE CONFIGINPUTS2 include/*.hpp.in.cmake)
FILE(GLOB_RECURSE CONFIGINPUTS3 src/*.in.hpp.cmake)
FILE(GLOB_RECURSE CONFIGINPUTS4 src/*.hpp.in.cmake)
FILE(GLOB_RECURSE CONFIGINPUTS5 test/*.in.hpp.cmake)
FILE(GLOB_RECURSE CONFIGINPUTS6 test/*.hpp.in.cmake)
LIST(APPEND CONFIGINPUTS "${CONFIGINPUTS1}")
LIST(APPEND CONFIGINPUTS "${CONFIGINPUTS2}")
LIST(APPEND CONFIGINPUTS "${CONFIGINPUTS3}")
LIST(APPEND CONFIGINPUTS "${CONFIGINPUTS4}")
LIST(APPEND CONFIGINPUTS "${CONFIGINPUTS5}")
LIST(APPEND CONFIGINPUTS "${CONFIGINPUTS6}")
FOREACH(CONFIGINPUT ${CONFIGINPUTS})
    STRING (REPLACE ".in.hpp.cmake" ".hpp" CONFIGOUTPUT1 "${CONFIGINPUT}")
    STRING (REPLACE ".hpp.in.cmake" ".hpp" CONFIGOUTPUT2 "${CONFIGOUTPUT1}")
    CONFIGURE_FILE ("${CONFIGINPUT}" "${CONFIGOUTPUT2}")
ENDFOREACH(CONFIGINPUT ${CONFIGINPUTS})

#
# Add Build Targets
#
ADD_SUBDIRECTORY(src)
